Fixed banner overlapping with other elements
This change removes z-index from the banner which created the unwanted
behavior of hiding useful content behind it.

--- a/src/app/core/banner/banner/banner.component.scss
+++ b/src/app/core/banner/banner/banner.component.scss
@@ -3,8 +3,6 @@
 $vertical-button-margin: $s;
 
 :host {
-  position: relative;
-  z-index: 22;
   display: block;
 }
 
